place order factory commited

--- a/app/index.html
+++ b/app/index.html
@@ -62,10 +62,13 @@
     <script src="scripts/controllers/productDtls.js"></script>
     <script src="scripts/controllers/moreDtls.js"></script>
     <script src="scripts/controllers/placeOrder.js"></script>
+    <script src="scripts/controllers/orderItemDtls.js"></script>
 
     <script src="scripts/directives/header.js"></script>
     <script src="scripts/directives/footer.js"></script>
     <script src="scripts/directives/menu.js"></script>
+
+    <script src="scripts/factories/placeOrder.js"></script>
    
     <script src="scripts/filters.js"></script>
 		
