--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,8 @@
     <script src="scripts/directives/footer.js"></script>
     <script src="scripts/directives/menu.js"></script>
 
+	<script src="scripts/services/getServiceURI.js"></script>
+	
     <script src="scripts/factories/placeOrder.js"></script>
 	 <script src="scripts/factories/login.js"></script>
    
