--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <div class="site-wrapper">
         <div class="page-wrapper footer-wrapper">  
 		<!--header here -->
-        <header-dtl></header-dtl>
+        <header-dtl login-user-name="loginUserName" is-logged-in="isLoggedIn"></header-dtl>
 		    <mor-menu> </mor-menu>
             <!-- Menu -->
            <section id="js-scrollable" class="main-container" style="min-height:87vh;">
