--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,8 @@
 	<script src="scripts/services/getServiceURI.js"></script>
 	
     <script src="scripts/factories/placeOrder.js"></script>
-	 <script src="scripts/factories/login.js"></script>
+	<script src="scripts/factories/login.js"></script>
+    <script src="scripts/factories/register.js"></script>
    
     <script src="scripts/filters.js"></script>
 		
