--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,11 @@
     <script src="scripts/controllers/account.js"></script>
      <script src="scripts/controllers/placeorder.js"></script>
 	<script src="scripts/controllers/orderItemDtls.js"></script>
+    <script src="scripts/controllers/hello1.js"></script>
+    <script src="scripts/controllers/hello.js"></script>
+    <script src="scripts/controllers/orderHistory.js"></script>
+
+
     <script src="scripts/directives/header.js"></script>
     <script src="scripts/directives/footer.js"></script>
     <script src="scripts/directives/menu.js"></script>
@@ -76,6 +81,7 @@
 	<script src="scripts/factories/login.js"></script>
     <script src="scripts/factories/register.js"></script>
     <script src="scripts/factories/account.js"></script>
+    <script src="scripts/factories/orderHistory.js"></script>
    
     <script src="scripts/filters.js"></script>
 		
