Implemented place order and view orders to admin

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <div class="site-wrapper">
         <div class="page-wrapper footer-wrapper">  
 		<!--header here -->
-        <header-dtl login-user-name="loginUserName" is-logged-in="isLoggedIn"></header-dtl>
+        <header-dtl login-user-name="loginUserName" is-admin="isAdmin" is-logged-in="isLoggedIn"></header-dtl>
 		    <mor-menu> </mor-menu>
             <!-- Menu -->
            <section id="js-scrollable" class="main-container" style="min-height:87vh;">
@@ -69,6 +69,10 @@
     <script src="scripts/controllers/hello1.js"></script>
     <script src="scripts/controllers/hello.js"></script>
     <script src="scripts/controllers/orderHistory.js"></script>
+    <script src="scripts/controllers/adminOrderDetails.js"></script>
+    <script src="scripts/controllers/todayOrders.js"></script>
+    <script src="scripts/controllers/configuration.js"></script>
+    <script src="scripts/controllers/regSucessPage.js"></script>
 
 
     <script src="scripts/directives/header.js"></script>
@@ -81,6 +85,7 @@
 	<script src="scripts/factories/login.js"></script>
     <script src="scripts/factories/register.js"></script>
     <script src="scripts/factories/account.js"></script>
+    <script src="scripts/factories/adminOrderDetails.js"></script>
     <script src="scripts/factories/orderHistory.js"></script>
    
     <script src="scripts/filters.js"></script>
